--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ maui/InterestPointClient/.vs/InterestPointClient/FileContentIndex/read.lock
 maui/InterestPointClient/.vs/InterestPointClient/v17/
 
 maui/.vs/
+
+maui/InterestPointClient/.vs/
