--- a/server/PointsOfInterestAPI/PointsOfInterestAPI/Properties/launchSettings.json
+++ b/server/PointsOfInterestAPI/PointsOfInterestAPI/Properties/launchSettings.json
@@ -4,17 +4,17 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:3712",
-      "sslPort": 44361
+      "applicationUrl": "http://localhost:54553",
+      "sslPort": 44365
     }
   },
   "profiles": {
-    "Backend": {
+    "PointsOfInterestAPI": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7082;http://localhost:5157",
+      "applicationUrl": "https://localhost:7142;http://localhost:5080",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
