--- a/client/QueManagement/package.json
+++ b/client/QueManagement/package.json
@@ -18,7 +18,8 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-maps": "^1.7.1",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "rn-sliding-up-panel": "^2.4.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
