--- a/server/PointsOfInterestAPI/PointsOfInterestAPI/PointsOfInterestAPI.csproj
+++ b/server/PointsOfInterestAPI/PointsOfInterestAPI/PointsOfInterestAPI.csproj
@@ -21,8 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-    <Folder Include="DbContext\" />
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
