--- a/server/PointsOfInterestAPI/PointsOfInterestAPI/Properties/launchSettings.json
+++ b/server/PointsOfInterestAPI/PointsOfInterestAPI/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:54553",
+      "applicationUrl": "http://lovslhost:5080",
       "sslPort": 44365
     }
   },
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7142;http://localhost:5080",
+      "applicationUrl": "http://localhost:5080",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
