--- a/client/QueManagement/package.json
+++ b/client/QueManagement/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@react-native-community/geolocation": "^3.0.6",
     "@react-navigation/drawer": "^6.6.2",
+    "@react-navigation/native-stack": "^6.9.12",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "axios": "^1.4.0",
+    "geolib": "^3.3.3",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-maps": "^1.7.1",
