--- a/client/QueManagement/package.json
+++ b/client/QueManagement/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.4.0",
     "geolib": "^3.3.3",
     "react": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-native": "0.71.8",
     "react-native-maps": "^1.7.1",
     "react-native-vector-icons": "^9.2.0",
