--- a/server/PointsOfInterestAPI/PointsOfInterestAPI/PointsOfInterestAPI.csproj
+++ b/server/PointsOfInterestAPI/PointsOfInterestAPI/PointsOfInterestAPI.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="JWT" Version="10.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.16" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.5">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
