--- a/.gitignore
+++ b/.gitignore
@@ -735,3 +735,5 @@ fabric.properties
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudio,csharp,dotnetcore,react,webstorm
+
+server/PointsOfInterestAPI/.idea/.idea.PointsOfInterestAPI/.idea/
