--- a/client/QueManagement/package.json
+++ b/client/QueManagement/package.json
@@ -20,6 +20,9 @@
     "react": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-native": "0.71.8",
+    "react-native-camera": "^4.2.1",
+    "react-native-camera-hooks": "^0.5.3",
+    "react-native-fs": "^2.20.0",
     "react-native-maps": "^1.7.1",
     "react-native-vector-icons": "^9.2.0",
     "rn-sliding-up-panel": "^2.4.6"
