--- a/client/QueManagement/package.json
+++ b/client/QueManagement/package.json
@@ -22,8 +22,11 @@
     "react-native": "0.71.8",
     "react-native-camera": "^4.2.1",
     "react-native-camera-hooks": "^0.5.3",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-fs": "^2.20.0",
     "react-native-maps": "^1.7.1",
+    "react-native-svg": "^13.9.0",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-vector-icons": "^9.2.0",
     "rn-sliding-up-panel": "^2.4.6"
   },
